fixed not centered nav buttons

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ nav {
     display: flex;
     position: fixed;
     z-index: 1;
-    width: 100%;
+    width: calc(100% - 2em); /* Set width to 100% of the viewport width */
     gap: 0.4em;
     padding: 1em;
     flex-direction: column;
